# Cmpe-283-Virtualization-Coursework

./: CMakeLists.txt  README.md
docs/: architecture.md  memory-virtualization.md  migration-protocol.md  performance-results.md
include/common/: types.hpp
include/cpu/: instruction.hpp
include/hypervisor/: hypervisor_core.hpp
include/memory/: virtual_memory.hpp
include/metrics/: metrics_tracer.hpp
include/migration/: migration_protocol.hpp  migration_service.hpp  state_serializer.hpp
include/scheduler/: scheduler.hpp
include/snapshot/: snapshot_service.hpp
include/vm/: virtual_machine.hpp
scripts/: benchmark.sh  run_demo.sh
src/: main.cpp
src/cpu/: cpu_state.cpp  instruction.cpp
src/hypervisor/: hypervisor_core.cpp
src/memory/: virtual_memory.cpp
src/metrics/: metrics_tracer.cpp
src/migration/: migration_protocol.cpp  migration_service.cpp  state_serializer.cpp
src/scheduler/: mlfq_scheduler.cpp  priority_scheduler.cpp  round_robin_scheduler.cpp
src/snapshot/: snapshot_service.cpp
src/vm/: virtual_machine.cpp
tests/: test_main.cpp
